final-project-terraform/Jenkins/backups/k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: yair23/nginx:latest # Use your new image here
          ports:
            - containerPort: 80
          volumeMounts:
            - name: static-files
              mountPath: /opt/status-page/statuspage/static # Path where NGINX will look for static files
      volumes:
        - name: static-files
          persistentVolumeClaim:
            claimName: static-pvc # Use the same PVC
