final-project-terraform/Jenkins/backups/k8s/Django-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    app: django
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
