final-project-terraform/Jenkins/backups/k8s/Django-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-body-size: "25m"
spec:
  rules:
    - host: example.com # Replace with your domain or IP
      http:
        paths:
          # Static files
          - path: /static/
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 8000
          # All other requests to the Django app
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-service
                port:
                  number: 8000
